# android-vibe-coding

./: .gitignore  CLAUDE.md  README.md  package.json
.claude/: settings.local.json
a2ui_sample/client/GenUIDemo/: README.md  pubspec.yaml  test_compile.dart
a2ui_sample/client/GenUIDemo/android/app/: build.gradle.kts
a2ui_sample/client/GenUIDemo/android/app/src/main/kotlin/com/young/genuidemo/: MainActivity.kt
a2ui_sample/client/GenUIDemo/ios/Runner/: Info.plist
a2ui_sample/client/GenUIDemo/ios/Runner.xcodeproj/: project.pbxproj
a2ui_sample/stock_lookup/: .env.example  .gitignore  README.md  __main__.py  a2ui_examples.py  agent.py  agent_executor.py  prompt_builder.py  pyproject.toml  stock_data.json  tools.py
a2ui_sample/stock_lookup/shared_a2ui/: __init__.py  agent_base.py  executor_base.py
demo/internal_docs/: 内部埋点规范_V1.0.txt
demo/mcp-server/: server.py
docs/: A2UI：面向 Agent 的声明式 UI 协议（一）：A2UI 是什么.md  A2UI：面向 Agent 的声明式 UI 协议（三）：相关概念和技术架构.md  A2UI：面向 Agent 的声明式 UI 协议（二）：实践_Agent服务端和客户端实现.md  AI 助力 Android 工程化实践：（一）Figma Context MCP + Cursor 实现高效UI 工程化.md  AI 助力 Android 工程化实践：（三）自建 MCP Server：让大模型接入内部知识库.md  AI 助力 Android 工程化实践：（二）Cursor Rules 构建团队级开发规范.md  AI 助力 Android 工程化实践：（四）Codex 最佳实践指南.md  AI 助力 Android 工程化实践：（四）subagent.md
